--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -28,13 +28,12 @@ layout: default
     <div class="w-full sm:w-3/5 md:w-1/2">
         <div class="ccinfoframe mx-auto my-12 lg:float-right xl:mr-8 rounded-lg shadow-xl" title="{{ site.serverName }} Discord embed" style="background-color:#36393f;">
             <widgetbot
-                server="{{ site.discordServerID }}"
-                channel="{{ site.discordChannelID }}"
-                width="100%"
-                height="100%"
-            ></widgetbot>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+  server="905845847214931998"
+  channel="909785595197411368"
+  width="800"
+  height="600"
+></widgetbot>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
     </div>
 </div>
 
